test/typechecker.d/invalid/ass2.surc.bad
n = 5

f(x: Integer): Integer = fndo
	var b: Bool <- 'c'
	if b
		return x
	else
		return n
